# chip8emu

./: .gitignore  Cargo.toml  README.md  build-releases.sh
src/: audio.rs  chip8.rs  main.rs
