[package]
name = "chip8emu"
version = "0.2.0"
edition = "2021"
authors = ["Sergey <me@coyotle.ru>"]
license = "MIT"

[dependencies]
bevy = "0.15.2"
rodio = "0.20.1"
rand = "0.9.0"
clap = { version = "4.5.29", features = ["derive"] }


[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
strip = true
